--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-geocode": "^0.1.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.1.1",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
