--- a/package.json
+++ b/package.json
@@ -21,7 +21,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && mv build/index.html build/200.html && surge build"
+  },
+  "proxy": {    
+    "/api": {      
+      "target": "https://wordmapper-backend.herokuapp.com/"    
+    }  
   },
   "eslintConfig": {
     "extends": "react-app"
